new sparse files are added to VS project file

--- a/lib/sparse/gvsparse.vcproj
+++ b/lib/sparse/gvsparse.vcproj
@@ -165,6 +165,18 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\BinaryHeap.c"
+				>
+			</File>
+			<File
+				RelativePath=".\general.c"
+				>
+			</File>
+			<File
+				RelativePath=".\IntStack.c"
+				>
+			</File>
+			<File
 				RelativePath=".\SparseMatrix.c"
 				>
 			</File>
