adding man page for cluster

--- a/cmd/gvmap/Makefile.am
+++ b/cmd/gvmap/Makefile.am
@@ -2,8 +2,8 @@
 ## Process this file with automake to produce Makefile.in
 
 pdfdir = $(pkgdatadir)/doc/pdf
-man_MANS = gvmap.1
-pdf_DATA = gvmap.1.pdf
+man_MANS = gvmap.1 cluster.1
+pdf_DATA = gvmap.1.pdf cluster.1.pdf
 
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
@@ -53,8 +53,8 @@ cluster_LDADD = \
 gvmap.1.pdf: $(srcdir)/gvmap.1
 	- @GROFF@ -Tps -man $(srcdir)/gvmap.1 | @PS2PDF@ - - >gvmap.1.pdf
 
-clustering.1.pdf: $(srcdir)/clustering.1
-	- @GROFF@ -Tps -man $(srcdir)/clustering.1 | @PS2PDF@ - - >clustering.1.pdf
+cluster.1.pdf: $(srcdir)/cluster.1
+	- @GROFF@ -Tps -man $(srcdir)/cluster.1 | @PS2PDF@ - - >cluster.1.pdf
 
 EXTRA_DIST = $(man_MANS) $(pdf_DATA) # gvmap.vcproj
 
