--- a/doc/infosrc/Makefile.old
+++ b/doc/infosrc/Makefile.old
@@ -35,7 +35,7 @@ SGIF = Mcircle.gif Mdiamond.gif Msquare.gif box.gif \
       circle.gif diamond.gif doublecircle.gif \
       doubleoctagon.gif egg.gif ellipse.gif hexagon.gif house.gif \
       invhouse.gif invtrapezium.gif invtriangle.gif none.gif \
-      octagon.gif parallelogram.gif plaintext.gif \
+      octagon.gif oval.gif parallelogram.gif plaintext.gif \
       point.gif polygon.gif trapezium.gif triangle.gif \
       tripleoctagon.gif pentagon.gif septagon.gif rect.gif \
       rectangle.gif square.gif
