--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -1,6 +1,6 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = dot tools gvpr lefty lneato dotty smyrna gvmap
+SUBDIRS = dot tools gvpr lefty lneato dotty smyrna gvmap gvedit
 
 EXTRA_DIST = Makefile.old
