make it build with qt4

--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -3,6 +3,14 @@
 
 SUBDIRS = ui images
 
+all: gvedit
+
+qMakefile: gvedit.pro
+	qmake-qt4 -o qMakefile gvedit.pro
+
+gvedit: main.cpp qMakefile
+	$(MAKE) -f qMakefile prefix=${prefix} libdir=${libdir}
+
 EXTRA_DIST = csettings.cpp csettings.h document1.png document2.png \
 	gvedit.pro gvedit.ncb gvedit.sln gvedit.vcproj gvedit.vcproj.RESEARCH.arif.user gvedit.vcproj.user \
 	imageviewer.cpp imageviewer.h \
