--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -114,6 +114,8 @@ BuildRequires: python python-devel
 BuildRequires: java-devel
 %define PHP 1
 BuildRequires: php-devel
+%define QT 0
+BuildRequires: qt-devel
 %ifnarch ppc64
 %define SHARP 1
 BuildRequires: mono-core
@@ -264,6 +266,21 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %files ming
 %{_libdir}/graphviz/libgvplugin_ming.so.*
 %{_libdir}/graphviz/*fdb
+%endif
+
+#-- graphviz-qt rpm --------------------------------------------------
+%if 0%{?QT}
+%package qt
+Group:            Applications/Multimedia
+Summary:          Graphviz applications using QT
+Requires:         graphviz = %{version}-%{release}
+
+%description qt
+Graphviz applications using QT - currently just gvedit
+
+%files qt
+%{_bindir}/gvedit
+%{_datadir}/graphviz/gvedit/*
 %endif
 
 #-- graphviz-sharp rpm --------------------------------------------
