--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -9,7 +9,7 @@ qMakefile: gvedit.pro
 	qmake-qt4 -o qMakefile gvedit.pro
 
 gvedit: main.cpp qMakefile
-	$(MAKE) -f qMakefile prefix=${prefix} libdir=${libdir}
+	$(MAKE) -f qMakefile prefix=${prefix} exec_prefix=${exec_prefix}
 
 EXTRA_DIST = csettings.cpp csettings.h document1.png document2.png \
 	gvedit.pro gvedit.ncb gvedit.sln gvedit.vcproj gvedit.vcproj.RESEARCH.arif.user gvedit.vcproj.user \
