--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -32,7 +32,7 @@ Prefix: /usr
 # Available features are:
 #    SHARP GHOSTSCRIPT GUILE _IO JAVA LUA OCAML ORTHO PERL PHP
 #    PYTHON RUBY R_LANG TCL IPSEPCOLA MYLIBGD PANGOCAIRO RSVG
-#    GLITZ SMYRNA DEVIL MING GDK_PIXBUF
+#    GLITZ SMYRNA DEVIL MING GDK_PIXBUF QT
 
 # SuSE uses a different mechanism to generate BuildRequires
 # norootforbuild
@@ -114,7 +114,7 @@ BuildRequires: python python-devel
 BuildRequires: java-devel
 %define PHP 1
 BuildRequires: php-devel
-%define QT 0
+%define QT 1
 BuildRequires: qt-devel
 %ifnarch ppc64
 %define SHARP 1
@@ -181,6 +181,7 @@ fi
 %{_bindir}/*
 %exclude %{_bindir}/diffimg
 %exclude %{_bindir}/dot_builtins
+%exclude %{_bindir}/gvedit
 %dir %{_libdir}/graphviz
 %{_libdir}/*.so.*
 %{_libdir}/graphviz/*.so.*
@@ -281,6 +282,7 @@ Graphviz applications using QT - currently just gvedit
 %files qt
 %{_bindir}/gvedit
 %{_datadir}/graphviz/gvedit/*
+# %{_mandir}/man1/gvedit.1*
 %endif
 
 #-- graphviz-sharp rpm --------------------------------------------
@@ -603,7 +605,9 @@ CFLAGS="$RPM_OPT_FLAGS" \
 	--with%{!?IPSEPCOLA:out}-ipsepcola \
 	--with%{!?LASI:out}-lasi \
 	--with%{!?MING:out}-ming \
+	--with%{!?QT:out}-qt \
 	--with%{!?PANGOCAIRO:out}-pangocairo \
+	--with%{!?QT:out}-qt \
 	--with%{!?RSVG:out}-rsvg \
 	--with%{!?ORTHO:out}-ortho \
 	--with%{!?SFDP:out}-sfdp \
