installing gvedit fixes

--- a/configure.ac
+++ b/configure.ac
@@ -3342,6 +3342,7 @@ echo "  jpeg:          $use_jpeg"
 echo "  sfdp:          $use_sfdp"
 echo "  shared:        $use_shared"
 echo "  static:        $use_static"
+echo "  qt:            $use_qt"
 echo ""
 echo "commands:"
 echo "  dot:           Yes (always enabled)"
@@ -3353,6 +3354,7 @@ echo "  gvpr:          Yes (always enabled)"
 echo "  gvmap:         Yes (always enabled)"
 echo "  lefty:         $use_lefty"
 echo "  smyrna:        $use_smyrna"
+echo "  gvedit:        $use_qt"
 echo ""
 echo "plugin libraries:"
 echo "  dot_layout:    Yes (always enabled)"
@@ -3372,7 +3374,6 @@ echo "  quartz:        $use_quartz"
 echo "  rsvg:          $use_rsvg"
 echo "  visio:         $use_visio"
 echo "  xlib:          $use_xlib"
-echo "  qt:            $use_qt"
 echo ""
 echo "language extensions:"
 echo "  gv_sharp:      $use_sharp"
