--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -5,6 +5,10 @@ SUBDIRS = ui images
 
 bin_PROGRAMS = gvedit
 
+gveditdir = $(pkgdatadir)/gvedit
+
+gvedit_DATA = attrs.txt
+
 gvedit_SOURCES = main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp
 
 noinst_HEADERS = csettings.h imageviewer.h mainwindow.h mdichild.h ui_settings.h 
@@ -15,14 +19,12 @@ qMakefile: gvedit.pro
 gvedit: main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp qMakefile
 	$(MAKE) -f qMakefile prefix=${prefix} exec_prefix=${exec_prefix}
 
-install-data-hook:
-	(cd $(DESTDIR)$(pkgdatadir)/gvedit; rm -f attrs.txt; $(LN_S) ../doc/infosrc/attrs attrs.txt;)
-
-uninstall-hook:
-	(cd $(DESTDIR)$(pkgdatadir)/gvedit; rm -f attrs.txt;)
+attrs.txt: $(top_srcdir)/doc/infosrc/attrs
+	cp $(top_srcdir)/doc/infosrc/attrs attrs.txt
 
 EXTRA_DIST = \
 	gvedit.pro.in gvedit.ncb gvedit.sln gvedit.vcproj gvedit.vcproj.RESEARCH.arif.user gvedit.vcproj.user \
 	mdi.pro mdi.qrc mdi.vcproj mdi.vcproj.RESEARCH.arif.user \
 	document1.png document2.png vc90.idb vc90.pdb
 
+DISTCLEAN = attrs.txt
