--- a/cmd/gvedit/gvedit.pro.in
+++ b/cmd/gvedit/gvedit.pro.in
@@ -1,6 +1,11 @@
 
 DEFINES += HAVE_CONFIG_H GVEDIT_DATADIR=@datarootdir@/graphviz/gvedit
-LIBS += -L@libdir@ -lgvc -lgraph -lcdt
+LIBS += \
+        -L$(top_builddir)/lib/gvc/.libs -lgvc_C \
+        -L$(top_builddir)/lib/graph/.libs -lgraph_C \
+        -L$(top_builddir)/lib/cdt/.libs -lcdt_C \
+        -lexpat -lz -lltdl
+
 INCLUDEPATH += \
 	/usr/include/Qt \
 	/usr/include/QtCore \
